--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,13 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #444;  
+  color: #fff;
+  
+}
+:root{
+  --area-porta-heigth: 310px;
+  --area-porta-width: 200px;
 }
 
 a {
@@ -14,3 +21,4 @@ a {
 * {
   box-sizing: border-box;
 }
+
