--- a/styles/porta.module.css
+++ b/styles/porta.module.css
@@ -4,6 +4,8 @@
     height: var(--area-porta-heigth);
     flex-direction: column;
     align-items: center;
+    margin: 5px;
+    position: relative;
 }
 
 
@@ -27,6 +29,17 @@
 
 }
 
+.macaneta{
+    position: absolute;
+    top: calc(0.50 * var(--area-porta-heigth));
+
+    align-self: flex-start;
+    height: 20px;
+    width: 20px;
+    border-radius: 10px;
+    background-color: brown;
+}
+
 .numero{
     font-size: 3rem;
 }
@@ -34,4 +47,15 @@
     height: 10px;
     width: 100%;
     background-color: #ddd;
+}
+.selecionada{
+    border-left: 5px solid orange;
+    border-top: 5px solid orange;
+    border-right: 5px solid orange;
+}
+.selecionada .numero{
+    color: orange;
+}
+.selecionada .macaneta{
+    background-color: orange;
 }
