--- a/styles/porta.module.css
+++ b/styles/porta.module.css
@@ -7,6 +7,7 @@
     margin: 5px;
     margin-top: 15px;
     position: relative;
+   
     cursor: pointer;
 }
 
@@ -15,6 +16,7 @@
     display: flex;
     flex-grow: 1;
     border-left: 5px solid brown;
+    flex-direction: column-reverse;
     border-top: 5px solid brown;
     border-right: 5px solid brown;
     width: 90%;
